--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
-backend/models_cache/
-backend/venv/
-backend/__pycache__/
+# Python
+venv/
+__pycache__/
+*.pyc
+
+# Node.js
+node_modules/
+build/
+dist/
+
+# Environment
+.env
+
+# VS Code
+.vscode/
+
+# Hugging Face cache
+.cache/
